--- a/index.html
+++ b/index.html
@@ -18,63 +18,97 @@
     </nav>
 
     <div class="main-container">
+
         <div class="bg1-container">
             <div class="txt1-center-container">
                 <h1>CONQUER</h1>
                 <h2>Simple Bootstrap Template</h2>
             </div>
          </div>
-        <section class="section 3-column">
-            <ul>
-                <li><h3>Bootstrap v3.3.6</h3>
-                    <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
-                    Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. 
-                    Quisque semper porta nisi vitae suscipit. Duis lectus magna, 
-                    ornare ac scelerisque.</p>
-                    <h3>Button Green</h3>
-                </li>
-                <li><h3>Responsive Design</h3>
-                    <p>Conquer Template is provided by templatemo for free of charge. 
-                        You can use this template for any kind of website. No credit link is required. 
-                        All images by Unsplash. Thank you for visiting our website. 
-                        Please come again!</p>
-                    <h3>See Details</h3>
-                </li>
-                <li><h3>Parallax Layout</h3>
-                    <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
-                        Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. 
-                        Quisque semper porta nisi vitae suscipit. Duis lectus magna, 
-                        ornare ac scelerisque.</p>
-                    <h3>Button Red</h3>
-                </li>
-            </ul>
 
-        <ul>
-            <li><h3>Two Column Left Side</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Nam tempor eros eget eros maximus, ut cursus sem euismod. 
-                    Donec iaculis tristique odio at consectetur. 
-                    Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
+        <div cass="box-container">
+            <div class="flex-3-box-container">
+                <div class="box box-1">
+                    <img src="/img/1-1.jpg">
+                    <div class="text">
+                        <h3>Bootstrap v3.3.6</h3>
+                            <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
+                            Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. 
+                            Quisque semper porta nisi vitae suscipit. Duis lectus magna, 
+                            ornare ac scelerisque.</p>
+                    </div>
+                    <button>Button Green</button>
+                </div>
 
-                    Vestibulum vel mauris at erat mattis accumsan et ac lorem. 
-                    Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, 
-                    auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, 
-                    in blandit metus.</p>
-            </li>
-            <li><h3>Two Column Right Side</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Nam tempor eros eget eros maximus, ut cursus sem euismod. 
-                    Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. 
-                    Sed in leo sit amet velit finibus pretium.
+                <div class="box box-2">
+                    <img src="/img/1-2.jpg">
+                    <div class="text">
+                        <h3>Responsive Design</h3>
+                            <p>
+                                Conquer Template is provided by templatemo for free of charge. 
+                                You can use this template for any kind of website. No credit link is required. 
+                                All images by Unsplash. Thank you for visiting our website. 
+                                Please come again!
+                            </p>
+                    </div>
+                    <button>See Details</button>
+                </div>
 
-                    Vestibulum vel mauris at erat mattis accumsan et ac lorem. 
-                    Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, 
-                    auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, 
-                    in blandit metus.</p>
-                <h3>Read More</h3>
-            </li>
-        </ul>
-    </section>
+                <div class="box box-3">
+                    <img src="/img/1-3.jpg">
+                    <div class="text textbox-1">
+                        <h3>Parallax Layout</h3>
+                            <p>
+                                Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
+                                Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. 
+                                Quisque semper porta nisi vitae suscipit. Duis lectus magna, 
+                                ornare ac scelerisque.
+                            </p>
+                    </div>
+                    <button>Button Red</button>
+                </div>
+            </div>
+
+        <div class="flex-2-box-container">
+            <div class="box box-left">
+                <img src="/img/2-1.jpg">
+                <div class="text">
+                    <h3>Two Column Left Side</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. 
+                        Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium.
+
+                        Vestibulum vel mauris at erat mattis accumsan et ac lorem. 
+                        Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, 
+                        auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, 
+                        in blandit metus.
+                    </p>
+                </div>
+            </div>
+            <div class="box box-left">
+                <img src="/img/2-2.jpg">
+                <div class="text">
+                    <h3>Two Column Right Side</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                        Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. 
+                        Sed in leo sit amet velit finibus pretium.
+
+                        Vestibulum vel mauris at erat mattis accumsan et ac lorem. 
+                        Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, 
+                        auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, 
+                        in blandit metus.
+                    </p>
+                    <button>Read More</button>
+                </div>  
+            </div>
+        </div>
+    </div> <!--// box-container-->
+            
+
     <div class="bg2-container">
         <div class="txt2-center-container">
             <h2>Our Services</h2>
@@ -82,16 +116,44 @@
                 felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
                 Etiam a mi quis arcu varius condimentum.</p>
         </div>
-     </div>
-
-     <div class="bg3-container">
-        <div class="txt3-center-container">
-            <h2>Contact Form</h2>
-            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
-                felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
-                Etiam a mi quis arcu varius condimentum.</p>
+    </div>
+    <div class="flex-4-box-container">
+        <div class="box col">
+            <img src="/img/4-1.jpg">
+            <h3>Column One</h3>
+            <p>
+                Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. 
+                Fusce posuere egestas enim eu viverra.
+            </p>
         </div>
-     </div>
+        <div class="box col">
+            <img src="/img/4-2.jpg">
+            <h3>Column Two</h3>
+            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+            <button>Read It</button>
+        </div>
+        <div class="box col">
+            <img src="/img/4-3.jpg">
+            <h3>Column Three</h3>
+            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. 
+                Fusce posuere egestas enim eu viverra.</p>
+        </div>
+        <div class="box col">
+            <img src="/img/4-4.jpg">
+            <h3>Column Four</h3>
+            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+            <button>Details</button>
+        </div> 
+    </div>  
+
+        <div class="bg3-container">
+            <div class="txt3-center-container">
+                <h2>Contact Form</h2>
+                <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                    felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                    Etiam a mi quis arcu varius condimentum.</p>
+            </div>
+        </div>
 
     </div>
 
