use float in contact form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="flex-3-box-container">
                 <div class="box box-1">
                     <img src="/img/1-1.jpg">
-                    <div class="text">
+                    <div class="textbox">
                         <h3>Bootstrap v3.3.6</h3>
                             <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
                             Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. 
@@ -42,7 +42,7 @@
 
                 <div class="box box-2">
                     <img src="/img/1-2.jpg">
-                    <div class="text">
+                    <div class="textbox">
                         <h3>Responsive Design</h3>
                             <p>
                                 Conquer Template is provided by templatemo for free of charge. 
@@ -56,7 +56,7 @@
 
                 <div class="box box-3">
                     <img src="/img/1-3.jpg">
-                    <div class="text textbox-1">
+                    <div class="textbox">
                         <h3>Parallax Layout</h3>
                             <p>
                                 Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
@@ -72,7 +72,7 @@
         <div class="flex-2-box-container">
             <div class="box box-left">
                 <img src="/img/2-1.jpg">
-                <div class="text">
+                <div class="textbox">
                     <h3>Two Column Left Side</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -89,7 +89,7 @@
             </div>
             <div class="box box-left">
                 <img src="/img/2-2.jpg">
-                <div class="text">
+                <div class="textbox">
                     <h3>Two Column Right Side</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -120,40 +120,90 @@
     <div class="flex-4-box-container">
         <div class="box col">
             <img src="/img/4-1.jpg">
-            <h3>Column One</h3>
-            <p>
-                Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. 
-                Fusce posuere egestas enim eu viverra.
-            </p>
+            <div class="textbox">
+                <h3>Column One</h3>
+                <p>
+                    Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. 
+                    Fusce posuere egestas enim eu viverra.
+                </p>
+            </div>
         </div>
         <div class="box col">
             <img src="/img/4-2.jpg">
-            <h3>Column Two</h3>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
-            <button>Read It</button>
+            <div class="textbox">
+                <h3>Column Two</h3>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+                <button>Read It</button>
+            </div>
         </div>
         <div class="box col">
             <img src="/img/4-3.jpg">
-            <h3>Column Three</h3>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. 
-                Fusce posuere egestas enim eu viverra.</p>
+            <div class="textbox">
+                <h3>Column Three</h3>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. 
+                    Fusce posuere egestas enim eu viverra.</p>
+            </div>
         </div>
         <div class="box col">
             <img src="/img/4-4.jpg">
-            <h3>Column Four</h3>
-            <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
-            <button>Details</button>
+            <div class="textbox">
+                <h3>Column Four</h3>
+                <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+                <button>Details</button>
+            </div>
         </div> 
     </div>  
+    <div class="flex-big-box-container">
+        <div class="box">
+            <img src="/img/4-5.jpg">
+            <div class="textbox">
+                <h3>One Big Column</h3> 
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut cursus sem euismod. 
+                    Donec iaculis tristique odio at consectetur. Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium. 
+                    Vivamus dictum nisi ac fermentum interdum. Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, 
+                    sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus. 
+                    Praesent volutpat cursus rhoncus. Aenean arcu diam, suscipit ac neque in, sollicitudin convallis orci.
+                    &nbsp;
+                    Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus et magnis dis parturient montes, 
+                    nascetur ridiculus mus. Vivamus a urna tellus. Integer pharetra vitae nisi et lacinia. Morbi sagittis justo a velit placerat ullamcorper quis quis velit. 
+                    Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, 
+                    ornare ac scelerisque quis, maximus eget nisi.
+                </p> 
+                <button>Read More</button> 
+            </div>   
+        </div>
+    </div>
 
         <div class="bg3-container">
             <div class="txt3-center-container">
                 <h2>Contact Form</h2>
-                <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
-                    felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
-                    Etiam a mi quis arcu varius condimentum.</p>
+                <div class="form-container">
+                    <div class="form-box-align">
+                        <p>
+                            Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                            felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                            Etiam a mi quis arcu varius condimentum.
+                        </p>
+                        <form>
+                            <div class="form-left">
+                                <input type="text" placeholder="Name" name="name" required><br>
+                                <input type="text" placeholder="Email" name="email" required><br>
+                                <input type="text" placeholder="Subject" name="subject" required><br>  
+                            </div>
+                            <div class="form-right">
+                                <textarea placeholder="Your message here" name="message"></textarea><br>
+                                <button type="button">Send</button> 
+                            </div>
+                        </form>
+
+                    </div>       
+                </div>
+
             </div>
         </div>
+
+  
 
     </div>
 
